--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "guzzlehttp/guzzle": "^7.2"
   },
   "require-dev": {
-    "blumilksoftware/codestyle": "^0.2.0",
+    "blumilksoftware/codestyle": "^0.3.0",
     "phpunit/phpunit": "^9.5",
     "vlucas/phpdotenv": "^5.3"
   },
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "ecs": "./vendor/bin/ecs check",
-    "ecs-fix": "./vendor/bin/ecs check --fix",
+    "ecsf": "./vendor/bin/ecs check --fix",
     "test": "./vendor/bin/phpunit tests/mocked",
     "e2e": "./vendor/bin/phpunit tests/e2e"
   },
