--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 
 services:
   php:
-    image: ghcr.io/blumilksoftware/php:8.0.3.1
+    build: docker/php
     container_name: identifier-php
     working_dir: /application
     user: ${CURRENT_UID}
