--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,14 @@
   ],
   "require": {
     "php": "^7.2",
+    "ext-json": "*",
     "guzzlehttp/guzzle": "^7.2",
-    "symfony/http-foundation": "^5.2"
+    "symfony/http-foundation": "^5.2",
+    "vlucas/phpdotenv": "^5.3"
   },
   "require-dev": {
     "phpunit/phpunit": "^8.5",
-    "symplify/easy-coding-standard": "^8.3",
-    "vlucas/phpdotenv": "^5.3"
+    "symplify/easy-coding-standard": "^8.3"
   },
   "autoload": {
     "psr-4": {
