--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "ext-json": "*",
     "guzzlehttp/guzzle": "^7.2",
     "symfony/http-foundation": "^5.2",
-    "vlucas/phpdotenv": "^5.3"
+    "symfony/polyfill": "^1.22"
   },
   "require-dev": {
     "phpunit/phpunit": "^8.5",
