--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,11 @@
     }
   ],
   "require": {
-    "php": "^7.4|^8.0",
+    "php": "^8.0",
     "guzzlehttp/guzzle": "^7.2"
   },
   "require-dev": {
-    "blumilksoftware/codestyle": "^0.3.0",
+    "blumilksoftware/codestyle": "^0.4",
     "phpunit/phpunit": "^9.5",
     "vlucas/phpdotenv": "^5.3"
   },
