--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,15 @@
     }
   ],
   "require": {
-    "php": "^7.4|^8.0",
-    "guzzlehttp/guzzle": "^7.2"
+    "php": "^7.2",
+    "ext-json": "*",
+    "guzzlehttp/guzzle": "^6.2",
+    "symfony/http-foundation": "^5.2",
+    "symfony/polyfill": "^1.22"
   },
   "require-dev": {
-    "blumilksoftware/codestyle": "^0.3.0",
-    "phpunit/phpunit": "^9.5",
-    "vlucas/phpdotenv": "^5.3"
+    "phpunit/phpunit": "^8.5",
+    "symplify/easy-coding-standard": "^8.3"
   },
   "autoload": {
     "psr-4": {
