--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
   ],
   "require": {
     "php": "^8.0",
-    "guzzlehttp/guzzle": "^7.2"
+    "guzzlehttp/guzzle": "^7.2",
+    "symfony/http-foundation": "^5.3"
   },
   "require-dev": {
     "blumilksoftware/codestyle": "^0.4",
