--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,6 @@ services:
     image: ghcr.io/blumilksoftware/php:8.0
     container_name: identifier-php
     working_dir: /application
-    user: ${CURRENT_UID}
+    user: ${CURRENT_UID:-1000}
     volumes:
       - .:/application
