Improve errors handling (#9)
* Improve docker-compose.yml; Add Makefile; Update readme.md

* Improve tests automation

* Remove unused exception

* Remove handlers

* Improve setting host value; adjust tests; remove unused exception

* Remove old validation exceptions and handler

* Add IDS exceptions

* Add IDS codes dictionaries

* Add error response handler; Add DTO for error response

* Refactor Client errors handling

* Update .gitignore

* Add docker with xDebug

* Fix login tests

* Fix user actions tests

* Bump codestyle to 0.7

* ecs fix

* improve configuration tests

* Update packages to current composer install output; Remove unused e2e composer script

* Update doc blocks

* Fix build headers method and add test (PHP 8.1 support array unpacking for string-keyed arrays)

* Add tests for extracting response

* Fix testValidResponseIsExtractedCorrectly test

* Add tests for error response handler

* ecs fix

* Update readme

* Bump codestyle to 0.8

* Update docker/php/Dockerfile

Co-authored-by: Krzysztof Rewak <krzysztof.rewak@blumilk.pl>

* Update src/DTO/IdentifierService/IdentifierErrorResponse.php

Co-authored-by: Krzysztof Rewak <krzysztof.rewak@blumilk.pl>

* update readme.md

* fix tests

* improve xdebug config

* Add IdentifierErrorResponseBuilder.php

* code style fix

Co-authored-by: Krzysztof Rewak <krzysztof.rewak@blumilk.pl>

--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,13 @@
   ],
   "require": {
     "php": "^8.0",
-    "guzzlehttp/guzzle": "^7.2",
-    "symfony/http-foundation": "^5.3"
+    "guzzlehttp/guzzle": "^7.4",
+    "symfony/http-foundation": "^5.4"
   },
   "require-dev": {
-    "blumilksoftware/codestyle": "^0.4",
+    "blumilksoftware/codestyle": "^0.8",
     "phpunit/phpunit": "^9.5",
-    "vlucas/phpdotenv": "^5.3"
+    "vlucas/phpdotenv": "^5.4"
   },
   "autoload": {
     "psr-4": {
@@ -27,8 +27,7 @@
   "scripts": {
     "ecs": "./vendor/bin/ecs check --clear-cache",
     "ecsf": "./vendor/bin/ecs check --clear-cache --fix",
-    "test": "./vendor/bin/phpunit tests/mocked",
-    "e2e": "./vendor/bin/phpunit tests/e2e"
+    "test": "./vendor/bin/phpunit tests/mocked"
   },
   "config": {
     "optimize-autoloader": true,
