--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,15 @@
-version: "3.7"
+version: "3.8"
 
 services:
   php:
-    image: ghcr.io/blumilksoftware/php:8.0.3.1
+    build:
+      context: ./docker/php
+      args:
+        INSTALL_XDEBUG: ${INSTALL_XDEBUG}
     container_name: identifier-php
     working_dir: /application
-    user: ${CURRENT_UID}
+    user: ${CURRENT_UID:-1000}
+    extra_hosts:
+      - host.docker.internal:host-gateway
     volumes:
       - .:/application
