--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   "require": {
     "php": "^8.0",
     "guzzlehttp/guzzle": "^7.4",
-    "symfony/http-foundation": "^5.4|^6.0"
+    "symfony/http-foundation": "^5.4|^6.0|^7.0"
   },
   "require-dev": {
     "blumilksoftware/codestyle": "^1.6.0",
